assets/css/lipinskie-raki/main.css
/* ... */
.contact{
    width: 161px;
    height: 104px;
    margin-left: 95px;
}

#contact-num{
    font-family: Raleway;
    font-style: normal;
    font-weight: 300;
    font-size: 18px;
    line-height: 100%;
    align-items: center;
    text-transform: uppercase;

    color: #FFFFFF;
}

#contact-email{
    font-family: Raleway;
    font-style: normal;
    font-weight: 300;
    font-size: 14px;
    line-height: 100%;
    text-align: center;
    display: block;
    color: #CECECE;
}

.contact-social{
    position: relative;
    margin-top: 45px;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.footer-nav{
    width: 128px;
    height: 124px;
    margin-left: 179px;
    position: relative;
}

.footer-nav #footer-ul{
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 100%;
    margin-top: -2px;
}

#footer-ul li{
    list-style-type: none;
    display: block;
    font-family: Raleway, sans-serif;
    font-weight: 200;
    font-size: 18px;
    line-height: 100%;
    color: #9e9999;
    user-select: none;
    -moz-user-select: none;
    cursor: pointer;
    width: max-content;
    margin-top: 6px;
    transition: .2s;
}

#footer-ul li:hover{
    font-weight: normal;
    border-bottom: 3px solid #F13A3A;
    color: white;
}

.active-nav{
    font-weight: normal !important;
    border-bottom: 3px solid #F13A3A;
    color: white !important;
}

.footer-octo-logo{
    margin-top: 8px;
}

.footer-octo-logo embed{
    width: 150px;
    height: 70px;
}

#overlay{
    position: fixed; /* Sit on top of the page content */
    width: 100%; /* Full width (cover the whole page) */
    height: 100%; /* Full height (cover the whole page) */
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0,0,0,0.5); /* Black background with opacity */
    z-index: 100;
    cursor: pointer;
    display: none;
}
.dropdown{
    display: none;
    width: 128px;
    height: max-content;
    background: #F13A3A;
    box-shadow: 0 4px 4px rgba(58, 10, 10, 0.25);
    position: absolute;
    z-index: 1000;
    right: 60px;
}
.dropdown ul{
    width: 100%;
    list-style-type: none;
    padding: 0 0 0 0;
    margin-bottom: 0;
}

.dropdown ul li{
    height: max-content;
    font-family: Raleway, sans-serif;
    font-style: normal;
    font-weight: 300;
    font-size: 18px;
    line-height: 30px;
    text-align: center;
    color: #FFFFFF;
    cursor: pointer;
}

.dropdown ul li:hover{
    background: #CD3131;
}

.dropdown-footer{
    right: 0;
    left: 31px;
    top: 15px;
}

#menu{
    display: block;
    cursor: pointer;
}
#menu object{
    pointer-events: none;
}

.menu-nav{
    display: none;
    height: calc(100% - 78px);
    height: -o-calc(100% - 78px); /* opera */
    height: -webkit-calc(100% - 78px); /* google, safari */
    height: -moz-calc(100% - 78px);
    width: 100%;
    position: fixed;
    z-index: 400;
    left: 0;
    top: 78px;
    overflow-x: hidden; /* Disable horizontal scroll */
    transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
    background: rgba(13, 11, 11, 0.9);
}
#user-mobile{
    position: absolute;
    top: 22px;
    right: 20px;
    width: 50px;
    height: 50px;
}

.menu-nav ul{
    list-style-type: none;
    padding-left: 60px;
    font-family: Raleway,sans-serif;
    font-style: normal;
    font-weight: 200;
    font-size: 24px;
    line-height: 100%;
    color: #9e9999;
    overflow: scroll;
    max-height: 65%;

}
.menu-nav ul li{
    margin-top: 30px;
    width: max-content;
    cursor: pointer;
    user-select: none;
    -moz-user-select: none;
}
.menu-nav ul li:hover{
    font-weight: normal !important;
    border-bottom: 3px solid #F13A3A;
    color: white !important;
}
.curtain-line{
    width: 344px;
    height: 0;
    border: 4px solid #F13A3A;
    position: absolute;
    left: 0;
    right: 0;
    bottom: 30px;
    margin-left: auto;
    margin-right: auto;
    /*margin: 0 auto;*/
    /*bottom: -webkit-calc(-100% + 40px);*/

}

.curtain-info{
    position: absolute;
    left: 0;
    right: 0;
    bottom: 88px;
    margin-left: auto;
    margin-right: auto;
    width: 215px;
    height: 78px;
    text-align: center;
    font-family: Raleway, sans-serif;
    font-style: normal;
    font-weight: 300;
    line-height: 100%;
    /*bottom: -webkit-calc(-100% + 40px);*/
}

.curtain-info #phone{
    text-transform: uppercase;
    color: #CECECE;
    font-size: 24px;
}

.curtain-info #email{
    margin-top: 12px;
    font-size: 18px;
    color: #CECECE;
    display: block;
}

.curtain-info #address{
    color: #CECECE;
    font-size: 18px;
    margin-top: 6px;
    display: block;
}
.mobile-dropdown{
    display: none;
}
#mobile-basket{
    display: none;
}

.menu-nav ul li:nth-child(5) span{
    display: none;
}

.additional-nav{
    display: none;
}

.fast-order-in-mini-header{
    right: 200px;
    top: 40px;
    left: unset;
}

.modal-window{
    position: relative;
    width: 770px;
    height: 299px;
    margin: 20% auto;
    background: #F13A3A;
    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
}

#close-modal{
    position: absolute;
    width: 25px;
    height: 25px;
    top: 13px;
    right: 13px;
    cursor: pointer;
}

.choose-type-container{
    display: flex;
    width: 100%;
    margin: 25px auto;
    justify-content: space-around;
    z-index: 200;
    position: relative;
}

.forgot-pass-input{
    width: 205px;
    margin: 0 auto;
}

#lobster-2{
    position: absolute;
    left: -70px;
    transform: rotate(-45deg);
    top: -90px;
    width: 300px;
    height: 300px;
}

.row-rating{
    justify-content: normal !important;
    margin-left: 0 !important;
}

.additional-special{
    display: none;
    height: 104px;
    padding-bottom: 24px;
    padding-top: 29px;
    width: 676px;
    margin: 0 auto;
}
/* ... */

